Fix text overflow in code snippets.

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -137,14 +137,19 @@ article time {
 }
 
 .highlight  {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
   font-family: "Fira Mono", "Menlo", monospace;
   background: #FBFBFB;
   box-sizing: border-box;
   padding: .25rem .5rem;
   margin: 1rem auto;
-  white-space: pre-wrap;
   max-width: 42rem;
   line-height: 1.5;
+}
+
+pre {
+  white-space: pre-wrap;
 }
 
 .highlight .ge {} /* Generic.Emph */
